--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,11 +36,13 @@
         width: 50px;
         height: 50px;
     }
-    .icones{
+    .icones {
         display: flex;
         justify-content: center;
     }
-
+    .mb-50 {
+        margin-bottom: 50px;
+    }
         
 
 
